<?xml version="1.0" encoding="utf-8"?>

<!-- Layout file for input dialog showing two text views and two buttons (Yes, and No).
     @author: Koulick Sankar Paul(ksp160330) -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#FFFACD">

    <TextView
        android:id="@+id/scoreInDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:textSize="20sp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/playAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playAgain"
        android:textSize="20sp"
        android:padding="20sp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/yesButton"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textSize="16sp"
            android:padding="20sp"
            android:backgroundTint="@color/colorWhite"/>

        <Button
            android:id="@+id/noButton"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textSize="16sp"
            android:padding="20sp"
            android:backgroundTint="@color/colorWhite"/>

    </LinearLayout>

</LinearLayout>